--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 Flask
 Flask_Cors
 gradio
-numpy==1.20.3
+numpy==1.23.0
 pyworld==0.2.5
-scipy==1.7.3
+scipy==1.10.0
 SoundFile==0.12.1
 torch==1.13.1
 torchaudio==0.13.1
+torchcrepe
 tqdm
 scikit-maad
 praat-parselmouth
@@ -14,5 +15,7 @@ onnx
 onnxsim
 onnxoptimizer
 fairseq==0.12.2
-librosa==0.8.1
+librosa==0.9.1
 tensorboard
+tensorboardX
+edge_tts
