--- a/requirements_win.txt
+++ b/requirements_win.txt
@@ -1,9 +1,9 @@
-librosa==0.9.2
+librosa==0.9.1
 fairseq==0.12.2
 Flask==2.1.2
 Flask_Cors==3.0.10
-gradio==3.4.1
-numpy==1.20.0
+gradio
+numpy
 playsound==1.3.0
 PyAudio==0.2.12
 pydub==0.25.1
@@ -14,8 +14,11 @@ sounddevice==0.4.5
 SoundFile==0.10.3.post1
 starlette==0.19.1
 tqdm==4.63.0
+torchcrepe
 scikit-maad
 praat-parselmouth
 onnx
 onnxsim
 onnxoptimizer
+tensorboardX
+edge_tts
